[gd_scene load_steps=6 format=3 uid="uid://bv7qp3xw8yjrm"]

[ext_resource type="Script" path="res://scripts/weapons/BonkHammer.gd" id="1_hammer"]
[ext_resource type="Script" path="res://resources/weapons/WeaponData.gd" id="2_weapondata"]

[sub_resource type="Resource" id="Resource_bonk_data"]
script = ExtResource("2_weapondata")
weapon_name = "Bonk Hammer"
weapon_description = "A mighty hammer that orbits around you, bonking enemies with devastating force!"
base_damage = 15.0
attack_cooldown = 1.0
attack_range = 3.0
projectile_count = 1
level = 1

[sub_resource type="CylinderMesh" id="CylinderMesh_hammer"]
top_radius = 0.15
bottom_radius = 0.15
height = 0.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_attack_range"]
radius = 0.6
height = 2.5

[node name="BonkHammer" type="Node3D"]
script = ExtResource("1_hammer")
weapon_data = SubResource("Resource_bonk_data")
weapon_type = "orbital"
orbit_radius = 1.8
orbit_speed = 2.0

[node name="HammerVisual" type="Node3D" parent="."]

[node name="Handle" type="MeshInstance3D" parent="HammerVisual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
mesh = SubResource("CylinderMesh_hammer")

[node name="Head" type="CSGBox3D" parent="HammerVisual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
size = Vector3(0.4, 0.3, 0.4)

[node name="AttackRange" type="Area3D" parent="."]
monitoring = true
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackRange"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = SubResource("CapsuleShape3D_attack_range")
